style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

@import url('https://fonts.cdnfonts.com/css/miama');

body {
    font-family: "Inter", sans-serif;
}

* {
    /* border: 2px solid white; */
    margin: 0;
    background-color: black;
    color: white;
    /* box-sizing: border-box; */
}

.container {
    /* border: 2px solid wheat; */
    width: 90%;
    /* 1 rem = 16px */
    margin: 5rem auto;
}

.btn_join {
    width: 200px;
    height: 50px;
    background-color: #d83016;
    font-family: "Inter";
    border: none;
    border-radius: 3rem;
    font-size: 17px;
    font-weight: 500;
}

/* navbar starts */

.nav_bar {
    /* border: 2px solid aqua; */
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav_h2 {
    color: #d83016;
    font-style: italic;
    font-size: xx-large;
}

.hamburger {
    display: none;
}

.nav_options {
    display: flex;
    /* justify-content: center; */
    align-items: center;
    gap: 80px;
}

.nav_options p {
    color: rgba(255, 255, 255, 0.8);
}

.nav_home {
    background-color: #d83016;
    height: 40px;
    width: 90px;
    border: none;
    border-radius: 3rem;
    font-size: 16px;
    font-family: "Inter";
}

/* navbar ends */

/* banner starts */

.banner_container {
    /* border: 2px solid aqua; */
    display: flex;
    /* margin-left: 15rem; */
}

.banner_content {
    /* border: 2px solid antiquewhite; */
    width: 50%;

    display: flex;
    /* justify-content: center; */
    margin-top: 50px;
    align-items: flex-start;
    flex-direction: column;
}

.banner_h1 {
    font-size: 50px;
    font-weight: 800;
    margin-bottom: 2rem;
}

#shape_text {
    font-family: "Miama", sans-serif;
    font-size: 80px;
    font-weight: 400;
    letter-spacing: 5px;
}

.banner_p {
    /* border: 2px solid yellow; */
    margin: 28px 0;
    color: rgba(255, 255, 255, 0.5);
}

.btn_download {
    margin-left: 20px;
    background-color: black;
    border: 1px solid white;
}

.banner_img {
    /* border: 2px solid yellow; */
    width: 50%;

    /* background-image: url('./images/Images2.png');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; */

    position: relative;
}

.down_color_full_box {
    /* border: 2px solid aliceblue; */
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 10px;
    /* width: 150px; */
    border-radius: 1rem;
    backdrop-filter: blur(15px);

    position: absolute;
    top: 60%;
    left: -10%;

    background-color: transparent;
    box-shadow:
        0 4px 8px rgba(255, 255, 255, 0.1),
        0 0 0 1px rgba(255, 255, 255, 0.05);
}

.red_circle {
    background: red;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    margin-left: 15px;
}

.down_box {
    /* border: 2px solid aqua; */
    height: 80px;
    width: 120px;
    border-radius: 1rem;

    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;

    background-color: transparent;
}

.down_box h3,
.down_box p {
    background-color: transparent;
}

.upper_box {
    /* border: 2px solid aqua; */
    height: 80px;
    width: 150px;
    border-radius: 1rem;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    position: absolute;
    top: 25%;
    left: 35%;

    background-color: transparent;
    backdrop-filter: blur(5px);

    box-shadow:
        0 4px 8px rgba(255, 255, 255, 0.1),
        0 0 0 1px rgba(255, 255, 255, 0.05);
}

.upper_box h3 {
    font-size: 40px;
    background-color: transparent;
}

.upper_box p {
    text-align: center;
    font-size: x-small;
    background-color: transparent;
}

/* banner ends */

/* change_habits starts */

.change_habits {
    /* border: 2px solid sandybrown; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.change_habits>h1 {
    font-size: 30px;
    font-weight: 900;
}

.change_habits>p {
    margin: 30px 0;
    text-align: center;
    font-size: small;
    color: rgba(255, 255, 255, 0.5);
}

.habits_box_container {
    /* border: 2px solid plum; */
    display: flex;
    gap: 40px;
    justify-content: space-evenly;
    /* align-items: center; */
}

.habits_card1 {
    /* border: 2px solid aqua; */
    width: 25%;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;

    width: 300px;
    height: 274px;
}

.habits_card1 img {
    border-radius: 50%;
}

.habits_card1 h5 {
    /* color: rgba(255, 255, 255, 0.8); */
    margin: 20px 0;
}

.habits_card1 p {
    color: rgba(255, 255, 255, 0.5);
    font-size: small;
}

/* change_habits ends */

/* extra mile starts */

.extra_mile_container {
    /* border: 2px solid aliceblue; */
    border-radius: 16px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px;
    background-color: #222222;
    /* width: 70%; */
    width: 87%;
    /* ! important */
}

.extra_mile_content {
    background-color: #222222;
    padding-left: 50px;
}

.extra_mile_content h1 {
    background-color: #222222;
    font-weight: 900;
    font-size: 40px;
}

.extra_mile_content p {
    font-size: small;
    margin: 20px 0;
    background-color: #222222;
    line-height: 25px;
    opacity: 0.5;
}

.btn_extra_mile {
    background-color: #222222;

}

.extra_mile_img_div {
    /* border: 2px solid palegreen; */
    /* height: 250px; */
    /* border-radius: 100%; */
    /* overflow: hidden; */
    /* padding: 30px; */

    width: 500px;
    background: none;
}

.extra_mile_img_div img {
    /* border: 2px solid yellow; */
    width: 100%;
    border-radius: 16px;
    /* height: 100%; */
    /* object-fit: cover; */

    object-fit: none;
    object-position: 66% 33%;
}

/* extra mile ends */

/* bmi starts */

.bmi {
    /* text-align: start; */
    margin-left: 12rem;
}

.bmi h1 {
    font-size: 40px;
    font-weight: 800;
}

.bmi p {
    margin-top: 2rem;
    opacity: 0.5;
}

/* -------------------------------------- */

.bmi_table_container {
    /* border: 2px solid yellow; */
    /* width: 100%; */
    border-radius: 1rem;
    background-color: #222222;
    padding: 50px 0;
    display: flex;
    gap: 10%;

    /* color: white; */
    /* opacity: 0.8; */
}

.bmi_calc_1 h1 {
    background-color: #222222;
    margin-bottom: 3rem;
}

.bmi_calc_1 table,
.bmi_calc_1 th,
.bmi_calc_1 td {
    background-color: #222222;
}

.bmi_calc_1 td {
    opacity: 0.8;
}

.bmi_calc_1 table,
th,
td {
    border: 1px solid white;
    border-collapse: collapse;
    padding: 8px;
}

.bmi_calc_1 {
    /* border: 2px solid springgreen; */
    width: 30%;
    background-color: #222222;

    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;

}

.bmi_calc_2 {
    /* border: 2px solid salmon; */
    width: 50%;
    background-color: #222222;
}

.bmi_calc_2 h1 {
    background-color: #222222;
}

.bmi_calc_2 p {
    margin: 10px 0;
    background-color: #222222;
    margin: 16px 0;
    opacity: 0.8;
}

.inp_height_weight {

    /* width: 100%; */
    
    /* border: 2px solid sandybrown; */
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    background-color: #222222;
    height: 50px;
}

::placeholder {
    color: rgb(255, 255, 255);
}

.inp_height_weight input {
    
    /* width: 100%; */

    background-color: rgba(128, 128, 128, 0.353);
    padding-left: 15px;
    border-radius: 8px;
    border: none;
    opacity: 0.8;
}

.inp_age_sex {
    margin: 10px 0;
    /* width: 100%; */
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    background-color: #222222;
    height: 50px;
}

.inp_age_sex input,
select {
    background-color: rgba(128, 128, 128, 0.353);
    padding-left: 15px;
    border-radius: 8px;
    border: none;
    opacity: 0.8;
}

.inp_activity_factor {
    width: 100%;
    background-color: rgba(128, 128, 128, 0.353);
    height: 50px;
    margin-bottom: 30px;
    opacity: 0.8;
}

/* bmi ends */

/* meet team start */

.meet_team>h1 {
    font-weight: 800;
    font-size: 40px;
    text-align: center;
}

.meet_team>p {
    font-size: small;
    text-align: center;
    margin-top: 16px;
    opacity: 0.5;
}

.grid_container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 16px;
    /* border: 2px solid aliceblue; */
    padding: 16px;
    border-radius: 16px;
    background-color: rgba(128, 128, 128, 0.353);
    /* background: none !important; */
    width: calc(90% - 16px);
}

.grid_container div {
    border-radius: 16px;
    background-color: rgba(128, 128, 128, 0.353);
    background: none;
}

.grid_container img {
    width: 100%;
    border-radius: 16px;
    /* border: 1px solid yellowgreen; */
    background-color: rgba(128, 128, 128, 0.353);
    /* aspect-ratio: 1 / 1; */
    height: 400px;
    object-fit: cover;
    object-position: center;
}

.div_trainer1 {
    position: relative;
}

.trainer_info {
    position: absolute;
    left: 5%;
    bottom: 5%;
    /* background-color: transparent; */
    background: none !important;
}

.trainer_info h4,
p {
    background-color: transparent;
}

/* meet team end */

/* footer starts */

.footer_container {
    /* border: 2px solid aquamarine; */
    width: 100%;
    background-color: rgba(128, 128, 128, 0.353);
    /* height: 300px; */
}

.footer_upper {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 30px;
    background-color: rgb(27, 27, 27);
}

.footer_left,
.footer_middle,
.footer_right {
    background: none;
}

.footer_left h1,
.footer_middle h1,
.footer_right h1 {
    background: none;
}

.footer_left h1 {
    font-size: 4rem;
    font-weight: 700;
}

.footer_left p,
.footer_middle p,
.footer_right p {
    margin: 20px 0;
}

.footer_left p {
    opacity: 0.5;
    line-height: 25px;
}

.footer_middle p,
.footer_right p {
    opacity: 0.5;
    ;
}

.right_reserved {
    /* border: 2px solid antiquewhite; */

    /* border-top: 2px solid white; */

    text-align: center;
    padding: 20px;
    opacity: 0.6;
}

/* footer ends */

/* challenge part starts */

.challenge_container {
    /* border: 2px solid red; */
    /* width: calc(90% - 50px); */
    width: 85%;
    padding: 50px;
    border-radius: 1rem;

    /* background-color: #222222; */
    background-image: url('images/challenge/challenge_bg_4.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: rgba(0, 0, 0, 0.6);
    background-blend-mode: overlay;
    /* backdrop-filter: blur(5px); */
    /* filter: brightness(70%); */
}

.challenge_container>h1 {
    text-align: center;
    margin-bottom: 50px;
    background: none;
    font-size: 30px;
    font-weight: 700;
}

.num_container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 200px;
    text-align: center;
    background: none;
}

.num_1,
.num_1 img,
.num_1 h2,
.num_1 p {
    background: none;
}

.num_2,
.num_2 img,
.num_2 h2,
.num_2 p {
    background: none;
}

.num_3,
.num_3 img,
.num_3 h2,
.num_3 p {
    background: none;
}

.num_4,
.num_4 img,
.num_4 h2,
.num_4 p {
    background: none;
}

.num_1 img {
    transform: scale(2);
    margin-bottom: 30px;
}
.num_2 img {
    transform: scale(1.5);
    margin-bottom: 19px;
}
.num_3 img {
    transform: scale(1.8);
    margin-bottom: 20px;
}
.num_4 img {
    transform: scale(1.5);
    margin-bottom: 30px;
}

/* challenge part ends */

